@@ -1,4 +1,7 @@
 2009-05-04 Iuri Fernandes <iurifq@gmail.com>
+* Created  table reservas, but the foreign key for hospedes is not working.
+
+2009-05-04 Iuri Fernandes <iurifq@gmail.com>
 * Created Tipo_Apartamentos scaffolding.
 
 2009-05-04 Iuri Fernandes <iurifq@gmail.com>
